--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@vercel/speed-insights": "^1.2.0",
     "daisyui": "^5.1.25",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
