--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@vercel/speed-insights": "^1.2.0",
     "daisyui": "^5.1.25",
+    "hamburger-react": "^2.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
